agentforce-chat-pkg/main/default/objects/AgentforceChatInject__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The text to inject as a user message into a Chat Card</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>