agentforce-chat-pkg/main/default/objects/AgentforceChatInject__e/fields/SessionId__c.field-meta.xml
<CustomField>
    <fullName>SessionId__c</fullName>
    <description>Optional: inject only into Chat Cards whose current sessionId matches. Blank = any session.</description>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>