agentforce-chat-pkg/main/default/objects/AgentforceChatInject__e/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <description>Identifier of the originating external system (for audit/debug)</description>
    <label>Source System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>