agentforce-chat-pkg/main/default/objects/AgentforceChatInject__e/fields/TargetCardTitle__c.field-meta.xml
<CustomField>
    <fullName>TargetCardTitle__c</fullName>
    <description>Optional: only Chat Cards with matching cardTitle will react. Blank = broadcast.</description>
    <label>Target Card Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>